--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                     <div class="card-content">
                         <div class="card-row">
                             <label>رقم اللوحة :</label>
-                            <div>5625ZUA</div>
+                            <div>5599BAA</div>
                         </div>
                         <div class="card-row">
                             <label>رقم الهيكل :</label>
-                            <div>WDB9340821L142539</div>
+                            <div>WDB9540321K452381</div>
                         </div>
                         <div class="card-row">
                             <label>الشركة الصانعة :</label>
@@ -74,7 +74,7 @@
                         </div>
                         <div class="card-row">
                             <label>تاريخ الفحص:</label>
-                            <div id="creationDate">5/8/2024</div>
+                            <div id="creationDate">25/7/2024</div>
                         </div>
                         <div class="card-row">
                             <label>مركز الفحص:</label>
@@ -86,7 +86,7 @@
                         </div>
                         <div class="card-row">
                             <label>تاريخ انتهاء صلاحية الفحص:</label>
-                            <div id="expireDate">5/8/2025</div>
+                            <div id="expireDate">25/7/2025</div>
                         </div>
                     </div>
                 </div>
