--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
                     <div class="card-content">
                         <div class="card-row">
                             <label>رقم اللوحة :</label>
-                            <div>5599BAA</div>
+                            <div></div>
                         </div>
                         <div class="card-row">
                             <label>رقم الهيكل :</label>
-                            <div>WDB9540321K452381</div>
+                            <div></div>
                         </div>
                         <div class="card-row">
                             <label>الشركة الصانعة :</label>
-                            <div>مرسيدس</div>
+                            <div></div>
                         </div>
                         <div class="card-row">
                             <label>نوع السيارة :</label>
